--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@react-navigation/native-stack": "^6.9.13",
         "react": "18.2.0",
         "react-native": "0.72.3",
+        "react-native-paper": "^5.10.6",
         "react-native-safe-area-context": "^4.7.1",
         "react-native-screens": "^3.24.0",
         "react-native-select-dropdown": "^3.4.0",
